--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -10,8 +10,8 @@
             <ul>
               <li>
                 <span class="icon-calling"></span
-                ><a href="tel:+99871 255 88 22 ">+998(71) 255-88-22 </a>
-              </li>
+                 > <a href="tel:+998712558822">+998 71 255 88 22</a>
+                </li>
               <li>
                 <span class="icon-clock"></span>{{ 'working_hours' | translate }}
               </li>
