--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -27,7 +27,7 @@
           <div class="space-box1"></div>
           <div class="header-mail-box">
             <span class="icon-placeholder"></span>
-            <p ><a routerLink="branches">Manzil</a>
+            <p ><a routerLink="branches">{{'footer.address.title'|translate}}</a>
 
             </p>
           </div>
