--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -9,14 +9,14 @@
         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 wow animated fadeInUp" data-wow-delay="0.1s">
           <div class="single-footer-widget marbtm50">
             <div class="our-company-info">
-              <div class="footer-logo">
+              <div class="logo-footer" >
                 <a href="index.html">
-                  <img src="../../../assets/images/icon/logo.png"  alt="" />
+                  <img src="../../../assets/images/icon/logo.svg"  alt="" />
                 </a>
               </div>
-              <div class="text-box">
+              <!-- <div class="text-box">
                 <p>{{ 'footer.about.description' | translate }}</p>
-              </div>
+              </div> -->
               <!-- <div class="our-company-info-list">
                 <ul>
                   <li><span class="icon-check-mark"></span>{{ 'footer.about.features.0' | translate }}</li>
