--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -44,7 +44,7 @@
           <div class="logo">
             <a routerLink="/"
               ><img class="logo"
-                src="../../../assets/images/icon/logo.png"
+                src="../../../assets/images/icon/logo.svg"
                 alt=" Logo"
                 title=""
             /></a>
@@ -146,7 +146,7 @@
         <div class="logo float-left">
           <a routerLink="/" class="img-responsive"
             ><img
-              src="https://elevenwater.uz/img/wp-content/uploads/2021/05/eleven_logo.png"
+              src="https://elevenwater.uz/img/wp-content/uploads/2021/05/eleven_logo.svg"
               alt=""
               title=""
           /></a>
