--- a/src/app/modules/about/components/about/about.component.html
+++ b/src/app/modules/about/components/about/about.component.html
@@ -68,7 +68,7 @@
                     <div class="inner">
                       <div class="img-box">
                         <div class="img-inner">
-                          <img src="assets/images/icon/logo.png" alt="Bizning hikoyamiz">
+                          <img src="assets/images/icon/logo.svg" alt="Bizning hikoyamiz">
                         </div>
                       </div>
                       <div class="text-box">
@@ -85,7 +85,7 @@
                     <div class="inner">
                       <div class="img-box">
                         <div class="img-inner">
-                          <img src="assets/images/icon/logo.png" alt="Bizning maqsadimiz">
+                          <img src="assets/images/icon/logo.svg" alt="Bizning maqsadimiz">
                         </div>
                       </div>
                       <div class="text-box">
